# reward-geometry

./: .gitignore  pyproject.toml  train_reward_models.py
dataset/: clean_datasets.py  prepare_datasets.py  prepare_ds.py  prepare_heldout.py  prepare_shuffled_ds.py  validate_datasets.py
rq1/: compare.py  config.py  extract_diff.py  heldout_analysis.py  heldout_config.py  metrics.py
training/: run_training.sh
