[project]
name = "reward-geometry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub>=1.17.0",
    "kaleido>=1.3.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "peft>=0.19.1",
    "plotly>=6.8.0",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.16",
    "scikit-learn>=1.9.0",
    "trl>=1.5.1",
    "wandb>=0.27.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
